Fri Dec 12 09:36:34 2003  George Lebl <jirka@5z.com>
 
        * gui/gdmcomm.c: check ownership of /tmp/.gdm_socket before using

Wed Dec 10 18:40:48 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch]: append a '!' to the action which was previously
	  selected (if one was)

Wed Dec 10 15:44:53 2003  George Lebl <jirka@5z.com>

	* configure.in: require gtk 2.3

	* Apply following patch from bugzilla to fix #128668

	2003-12-06  Jan Arne Petersen  <jpetersen@uni-bonn.de>

	* gui/gdmsetup.c: (install_response), (install_new_theme): replace
	  GtkFileSelection with GtkFileChooser.

Wed Dec 10 15:36:31 2003  George Lebl <jirka@5z.com>

        * daemon/display.c: Fix #126465 where xdmcp_sessions would not
          get decremented on normal logout.  Doh!  Just do a recount of
          all the limits on display dispose that is just a lot more robust.

	* daemon/xdmcp.c: minor cosmetic cleanup

Wed Dec 10 13:08:13 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/display.c, daemon/gdm-net.[ch],
	  daemon/server.c, daemon/xdmcp.c:  Add possibility to request
	  logout action to happen when the display dies using the SUP socket
	  protocol.  Very loosely based on a patch from Jarno Gassenbauer,
	  but simplified and not having a DoS and/or authentication leak
	  as the original patches do.  The commands are named different to
	  avoid naming conflict.

	* daemon/gdm.h, config/gdm.conf.in, docs/C/gdm.xml,
	  config/Makefile.am, gdm.spec.in: move the built in sessions to
	  a more appropriate place (datadir)

	* gui/gdmcommon.[ch], gui/gdmlogin.c, gui/greeter/greeter.[ch],
	  gui/greeter/greeter*.c: move some common utility functions to
	  a common sublibrary (renamed the language lib to libgdmcommon),
	  should cut down a little on the code duplication.  Needs more.

	* gui/gdmcommon.[ch], gui/gdmlogin.c, gui/greeter/greeter.c,
	  docs/C/gdm.xml, daemon/gdm.h, config/gdm.conf.in: Apply a patch
	  from Anton Altaparmakov to add an optional info message to the