@@ -1,3 +1,13 @@
+Fri Dec 12 17:14:41 2003  George Lebl <jirka@5z.com>
+
+	* daemon/gdm.h, gui/gdmlogin.c, gui/greeter/greeter.c,
+	  config/gdm.conf.in, docs/C/gdm.xml: There's now the ability to
+	  reap flexiservers that are inactive for a period of time.  The
+	  default time is 5 minutes.
+
+	* gui/gdmcomm.c: add the new error codes (7 and 200) to the error
+	  message table
+
 Fri Dec 12 09:36:34 2003  George Lebl <jirka@5z.com>
  
         * gui/gdmcomm.c: check ownership of /tmp/.gdm_socket before using
